# meta-record-qt

./: CMakeLists.txt  meta-record-qt.pc.in
metarecord/: MetaRecordQt_global.h  hasOne.h  metarecordable.cpp  metarecordable.h  metarecordcomparable.cpp  metarecordnotifiable.cpp  metarecordnotifiable.h  tablemodel.cpp  tablemodel.h  vector.h
metarecord-qt/: hasOne.h  metarecordable.cpp  metarecordable.h  metarecordcomparable.h  metarecordnotifiable.h  metarecordvalidatable.h  relationship.h  tablemodel.cpp  tablemodel.h  vector.h
tests/: CMakeLists.txt  tst_metarecordable.cpp  tst_metarecordable.h  tst_metarecordcomparable.cpp  tst_metarecordcomparable.h
